--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,102 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+
+:root {
+   
+  --blue-1: #503273;
+  --blue-2: #ffffff;
+  --yellow-1: #e9a700;
+  --white: #FFF;
+  --grey-1: #EDEDED;
+  --shadow-dark: rgba(0,0,0,0.3);
+  --shadow-light: rgba(255,255,255,0.1);
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+/* .container {
+  max-width: 500px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 300px;
+  border: 1px solid steelblue;
+  padding: 30px;
+  border-radius: 5px;
+} */
+
+.container {
+  max-width: 450px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 300px;
+  /* width: 400px;
+  height: 80vh; */
+  background-color: var(--blue-2);
+  border-radius: 20px;
+  padding: 30px;
+  box-shadow: 10px 10px 10px 10px var(--shadow-dark);
+
+}
+.btn {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 15px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+.btn:focus {
+  outline: none;
+}
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  border-radius: 10px;
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
